--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     web:
-        image: "mynodeapp:v1"
+        image: "redmed/mynodeapp:v1"
         ports:
             - "3000:3000"
         volumes:
