--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '2'
 services:
     web:
-        image: "redmed/mynodeapp:v1"
+        image: "redmed/mynodeapp:v4"
         ports:
             - "3000:3000"
+        links:
+            - "redis:redis"
 
     redis:
         image: "redis:alpine"
